// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test auth reducer should confirm user's adding 1`] = `
Object {
  "accessToken": null,
  "autoLogin": true,
  "errorMessage": "",
  "isAuthenticated": null,
  "name": "testUser",
  "refreshToken": null,
  "userId": "",
}
`;

exports[`test auth reducer should confirm user's authentication 1`] = `
Object {
  "accessToken": null,
  "autoLogin": null,
  "errorMessage": "",
  "isAuthenticated": true,
  "name": "",
  "refreshToken": null,
  "userId": "",
}
`;

exports[`test auth reducer should get message about a problem with authentication 1`] = `
Object {
  "accessToken": null,
  "autoLogin": null,
  "errorMessage": "Ważna wiadomość z serwera!",
  "isAuthenticated": null,
  "message": "Ważna wiadomość z serwera!",
  "name": "",
  "refreshToken": null,
  "userId": "",
}
`;

exports[`test auth reducer should get message about user's login fail 1`] = `
Object {
  "accessToken": null,
  "autoLogin": null,
  "errorMessage": "Ważna wiadomość z serwera!",
  "isAuthenticated": null,
  "message": "Ważna wiadomość z serwera!",
  "name": "",
  "refreshToken": null,
  "userId": "",
}
`;

exports[`test auth reducer should login user 1`] = `
Object {
  "accessToken": "aaaa.bbbb.cccc",
  "autoLogin": true,
  "errorMessage": "",
  "id": "1111-2222-3333-4444",
  "isAuthenticated": null,
  "name": "testUser",
  "refreshToken": "cccc.bbbb.aaaa",
  "userId": undefined,
}
`;

exports[`test auth reducer should logout user 1`] = `
Object {
  "accessToken": null,
  "autoLogin": null,
  "errorMessage": "",
  "isAuthenticated": false,
  "name": null,
  "refreshToken": null,
  "remember": false,
  "userId": "",
}
`;
